eclipse-workspace/Surya Dev Org/src/objects/stock__c.object
<CustomObject>
    <description>Stores some info.</description>
    <fields>
        <fullName>States_of_warranty_provider__c</fullName>
        <label>States of warranty provider</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>country_of_warranty_provider__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>birmingham</fullName>
                </value>
                <value>
                    <fullName>british columbia</fullName>
                </value>
                <value>
                    <fullName>california</fullName>
                </value>
                <value>
                    <fullName>illinois</fullName>
                </value>
                <value>
                    <fullName>london</fullName>
                </value>
                <value>
                    <fullName>massachusetts</fullName>
                </value>
                <value>
                    <fullName>melbourne</fullName>
                </value>
                <value>
                    <fullName>new york</fullName>
                </value>
                <value>
                    <fullName>ontario</fullName>
                </value>
                <value>
                    <fullName>sydney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True or False</description>
        <label>Warranty Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiry_Date__c</fullName>
        <description>Date in which product warranty expires</description>
        <label>Warranty Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>country_of_warranty_provider__c</fullName>
        <label>country of warranty provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>australia</fullName>
                </value>
                <value>
                    <fullName>canada</fullName>
                </value>
                <value>
                    <fullName>uk</fullName>
                </value>
                <value>
                    <fullName>usa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <description>the cost of items</description>
        <label>price</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <description>No. of items</description>
        <label>quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>time_of_stoking__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>exact time of stoking</description>
        <label>time of stoking</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>total_price_of_all_units__c</fullName>
        <formula>quantity__c  *  price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>total price of all units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>warranty_days_left__c</fullName>
        <formula>Warranty_Expiry_Date__c  -  TODAY()</formula>
        <label>warranty days left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>warranty_provider__c</fullName>
        <description>Name of the warranty provider for the respective item.</description>
        <label>warranty provider</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>stock</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>stock Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>stock</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>warranty_expiry_date_rule2</fullName>
        <active>true</active>
        <errorConditionFormula>Warranty_Applicable__c =false  &amp;&amp;  NOT( ISBLANK( Warranty_Expiry_Date__c ) )</errorConditionFormula>
        <errorDisplayField>Warranty_Expiry_Date__c</errorDisplayField>
        <errorMessage>please check warranty applicable before giving the warranty expiry date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>warrenty_expiry_date_rule</fullName>
        <active>true</active>
        <errorConditionFormula>Warranty_Applicable__c =true &amp;&amp;  ISBLANK( Warranty_Expiry_Date__c )</errorConditionFormula>
        <errorDisplayField>Warranty_Expiry_Date__c</errorDisplayField>
        <errorMessage>if warranty is applicable, you have to give warranty expiry date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>warrenty_provider_rule</fullName>
        <active>true</active>
        <errorConditionFormula>Warranty_Applicable__c =true &amp;&amp; NOT( ISBLANK( Warranty_Expiry_Date__c ) )  &amp;&amp;   ISBLANK( warranty_provider__c )</errorConditionFormula>
        <errorDisplayField>warranty_provider__c</errorDisplayField>
        <errorMessage>if warranty is applicable, you have to put warranty expiry date as well as warranty provider</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>warrenty_provider_rule2</fullName>
        <active>true</active>
        <errorConditionFormula>Warranty_Applicable__c =false &amp;&amp;  ISBLANK( Warranty_Expiry_Date__c ) &amp;&amp;  NOT( ISBLANK( warranty_provider__c ) )</errorConditionFormula>
        <errorDisplayField>Warranty_Applicable__c</errorDisplayField>
        <errorMessage>please check warranty applicable and warranty expiry date before giving warranty provider</errorMessage>
    </validationRules>
</CustomObject>